update to recipe

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
 
-    <span>My App</span>
-    <span class="spacer"></span>
+    <span>Cut the Bull</span>
+    <span class="flex-auto"></span>
     <span>{{name}}</span>
     
   </mat-toolbar>
