--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,20 +1,56 @@
-<mat-card class="example-card" appearance="outlined">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-  
+<div class="flex flex-row flex-wrap justify-center">
+  @for(recipe of recipes; track recipe.id){
+  <div class="flex mx-4 mt-8">
+    <mat-card class="max-w-md" appearance="outlined">
+      <mat-card-header>
+        <div
+          class="!w-14 !h-14"
+          mat-card-avatar
+          [style.background-image]="'url(' + recipe.chefImage + ')'"
+          [style.background-size]="'cover'"
+        ></div>
+        <mat-card-title class="!mb-2">{{
+          recipe.name | titlecase
+        }}</mat-card-title>
+        <mat-card-subtitle>
+          @for(category of recipe.categories; track category){
+          <span class="p-1 bg-lime-50 mx-1 rounded-full">
+            {{ category | titlecase }}
+          </span>
+          }
+        </mat-card-subtitle>
+      </mat-card-header>
+      <img
+        mat-card-image
+        [src]="recipe.imagePath"
+        [alt]="'Photo of a ' + recipe.name"
+      />
+      <mat-card-content>
+        @if(recipe.rating > 0){
+        <span *ngFor="let star of getRating(recipe.rating)"
+          ><mat-icon>star</mat-icon></span
+        >
+        @if(recipe.rating % 1 !== 0){
+        <span><mat-icon>star_half</mat-icon></span>
+        } }@else {
+        <span class="italic">No reviews yet</span>
+        }
+
+        <p>
+          {{ recipe.description }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-icon-button>
+          <mat-icon>favorite_outline</mat-icon>
+        </button>
+        <button mat-icon-button>
+          <mat-icon>share</mat-icon>
+        </button>
+        <span class="flex-auto"></span>
+        <button mat-button>View Recipe</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  }
+</div>
